syntax = "proto3";

option java_multiple_files = true;
option java_package = "is4b.facilities";
option java_outer_classname = "FacilitiesProto";

package facilities;

message Building {
  int32 id = 1;
  string name = 2;
}

message AddBuidingEvent {
  int32 userId = 1;
  string buildingName = 2;
}

message ListBuildingsEvent {
  int32 userId = 1;
}

message MeetingRoom {
  int32 id = 1;
  int32 buildingId = 2;
  int32 floor = 3;
  string name = 4;
  int32 capacity = 5;
  bool hasProjector = 6;
  bool hasWhiteboard = 7;
  bool hasConferenceLine = 8;
}

message AddMeetingRoomEvent {
  int32 userId = 1;
  MeetingRoom meetingRoom = 2;
}

message ListMeetingRoomsEvent {
  int32 userId = 1;
  int32 buildingId = 2;
  int32 floor = 3;
}

message ConfirmationEvent {
  int32 returnCode = 1;
  string statusMessage = 2;
}

service FacilitiesAdmin {
  rpc addBuilding(AddBuidingEvent) returns (ConfirmationEvent) {}
  rpc listBuildings(ListBuildingsEvent) returns (stream Building) {}
  rpc addMeetingRoom(AddMeetingRoomEvent) returns (ConfirmationEvent) {}
  rpc listMeetingRooms(ListMeetingRoomsEvent) returns (stream MeetingRoom) {}
}
